syntax = "proto3";
package craby.api.v1;
option go_package = "github.com/marciniwanicki/craby/internal/api";

message ChatRequest {
  string message = 1;
  string session_id = 2;  // Reserved for future use
}

message ChatResponse {
  oneof payload {
    TextChunk text = 1;
    ToolCall tool_call = 2;
    ToolResult tool_result = 3;
    bool done = 4;
    string error = 5;
    ShellCommand shell_command = 6;
  }
}

message ShellCommand {
  string command = 1;
  bool is_discovery = 2;
}

message TextChunk {
  string content = 1;
  Role role = 2;
}

message ToolCall {
  string id = 1;
  string name = 2;
  string arguments = 3;  // JSON string
}

message ToolResult {
  string id = 1;
  string name = 2;
  string output = 3;
  bool success = 4;
}

enum Role {
  ASSISTANT = 0;
  SYSTEM = 1;
  USER = 2;
}

message StatusRequest {}

message StatusResponse {
  bool healthy = 1;
  string model = 2;
  string version = 3;
}

message HistoryMessage {
  Role role = 1;
  string content = 2;
}

message HistoryResponse {
  repeated HistoryMessage messages = 1;
}

message ContextRequest {
  string context = 1;
}

message ContextResponse {
  string context = 1;
}

// Tool execution request/response
message ToolRunRequest {
  string name = 1;
  string arguments = 2;  // JSON string of key-value pairs
}

message ToolRunResponse {
  string output = 1;
  bool success = 2;
  string error = 3;
}

message ToolListResponse {
  repeated ToolInfo tools = 1;
}

message ToolInfo {
  string name = 1;
  string description = 2;
}
